[package]
name = "emoji-gen"
description = "Emoji import file generator for calckey"
license = "MIT"
readme = "README.md"
homepage = "https://codeberg.org/calckey/emoji-gen"
repository = "https://codeberg.org/calckey/emoji-gen"
authors = ["cutestnekoaqua <waterdev@galaxcrow.de>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"
walkdir = "2"
debug_print = "1.0.0"
imghdr = "0.7.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zip = "0.6.3"